funcionma y está más lindo

--- a/mokepon.html
+++ b/mokepon.html
@@ -49,24 +49,34 @@
         </div>
         <h2>Elige tu ataque:</h2>
 
-        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
-        <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
-
+        
+        
         <div class="container-botones">
             <button id="boton-fuego">Fuego 🔥</button>
             <button id="boton-agua">Agua 💧</button>
             <button id="boton-tierra">Tierra 🌱</button>
         </div>
-    </section>
 
-    <section id="mensajes">
-    </section>
-
-    <section id="reiniciar">
-        <div class="restart-boton-container">
-            <button id="boton-reiniciar">Reiniciar</button>
+        <div id="mensajes">
+            <p id="resultado"></p>
         </div>
+
+        <div>
+            <div id="ataque-del-jugador"></div>
+            <div id="ataque-del-enemigo"></div>
+            <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
+            <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas
+            </p>
+        </div>
+
     </section>
+    <div>
+        <section id="reiniciar">
+            <div class="restart-boton-container">
+                <button id="boton-reiniciar">Reiniciar</button>
+            </div>
+        </section>
+    </div>
 </body>
 
 </html>
