Funciona x2 se organizó el grid

--- a/mokepon.html
+++ b/mokepon.html
@@ -49,8 +49,8 @@
         </div>
         <h2>Elige tu ataque:</h2>
 
-        
-        
+
+
         <div class="container-botones">
             <button id="boton-fuego">Fuego 🔥</button>
             <button id="boton-agua">Agua 💧</button>
@@ -61,14 +61,18 @@
             <p id="resultado"></p>
         </div>
 
-        <div>
-            <div id="ataque-del-jugador"></div>
-            <div id="ataque-del-enemigo"></div>
-            <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
-            <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas
-            </p>
+        <div class="cuadros-ataques">
+            <div>
+                <p id="vidas-jugador">3</p>
+                <p id="mascota-jugador"></p> 
+                <div id="ataque-del-jugador"></div>
+            </div>
+            <div>
+                <p id="vidas-enemigo">3</p>
+                <p id="mascota-enemigo"></p>
+                <div id="ataque-del-enemigo"></div>
+            </div>
         </div>
-
     </section>
     <div>
         <section id="reiniciar">
