--- a/mokepon.html
+++ b/mokepon.html
@@ -17,7 +17,7 @@
 
 
         <div style="display: flex; flex-direction: column;">
-            <div style="display: flex; justify-content: space-evenly;">
+            <div class="tarjetas-finales">
                 <div class="square-button container-hipodoge">
                     <label class="nombre-mascotas" for="hipodoge">Hipodoge</label>
                     <img class="mokepon-img" src="./assets/mokepons_mokepon_hipodoge_attack.png" alt="Hipodoge">
@@ -33,9 +33,8 @@
                     <img class="mokepon-img" src="./assets/mokepons_mokepon_ratigueya_attack.png" alt="Ratigueya">
                     <input type="radio" name="mascota" id="ratigueya" />
                 </div>
-
-
             </div>
+
             <div>
                 <button id="boton-mascota">Seleccionar</button>
             </div>
@@ -64,7 +63,7 @@
         <div class="cuadros-ataques">
             <div>
                 <p id="vidas-jugador">3</p>
-                <p id="mascota-jugador"></p> 
+                <p id="mascota-jugador"></p>
                 <div id="ataque-del-jugador"></div>
             </div>
             <div>
